chore: fixed rosella heading spacing

--- a/_includes/assets/css/tailwind.css
+++ b/_includes/assets/css/tailwind.css
@@ -29,6 +29,7 @@ h1 {
     font-family: rosella-hatched,sans-serif;
     font-weight: 400;
     font-style: normal;
+    margin-top: -28px;
 }
 
 h2 {
@@ -38,6 +39,7 @@ h2 {
     font-style: normal;
     text-transform: uppercase;
     letter-spacing: 2px;
+    margin-top: -23px;
 }
 
 h3 {
@@ -277,6 +279,8 @@ header button {
 }
 
 .btn {
+    display: flex;
+    width: max-content;
     font-family: prohibition, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -420,8 +424,8 @@ header button {
 .about-section {
     background: #1D120A;
     color: #fff;
-    padding-top: 5rem;
-    padding-bottom: 7rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
 }
 
 .about-section h2, .why-section h2 {
